--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/starlight": "^0.37.2",
+    "@fontsource/source-sans-3": "^5.2.9",
     "astro": "^5.6.1",
     "sharp": "^0.34.2"
   }
