--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "format": "prettier --write \"src/**/*.{css,astro,js,ts,json}\""
   },
   "dependencies": {
     "@astrojs/starlight": "^0.37.2",
     "@fontsource/source-sans-3": "^5.2.9",
     "astro": "^5.6.1",
     "sharp": "^0.34.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.8.1"
   }
 }
