--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write \"src/**/*.{css,astro,js,ts,json}\""
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.7.0",
     "@astrojs/starlight": "^0.37.2",
     "@fontsource/source-sans-3": "^5.2.9",
     "astro": "^5.6.1",
